style.css
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    overflow-x: hidden;  /* Prevent horizontal scrolling */
}

body {
    background-color: #f5f5f5;
    font-family: "Inter var", Inter, system-ui, sans-serif;
    font-size: 1.1rem;
}

.background-image {
    position: absolute; 
    /* top: 50%;
    left: 50%; */
    /* transform: translate(-50%, -50%); */
    z-index: -1; 
}

.background-image img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* Ensures the image fills the div proportionally */
    object-position: center; /* Centers the image */
  }

#sphereImage {
    filter: invert(30%);
}

.icon {
    height: 1em;
    vertical-align: middle;
}

.container {
    height: calc(100vh - 110px);
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.header {
    text-align: center;
    margin-top: 10px;
}

#carousel {
}

#peerconsole {
    width: 50%;
    height: 100%;
    background-color: #000;
    color: #0f0;
    font-family: 'Courier New', monospace;
    font-size: 14px;
    border: 1px solid #333;
    padding: 8px;
    box-sizing: border-box;  /* Ensures padding doesn't affect size */
    resize: none;            /* Disable resizing */
    overflow-y: auto;        /* Enable vertical scrolling */
    white-space: pre-wrap;   
    border-radius: 8px;
    margin: 0;               /* No extra margins */
    opacity: 0.6;
}

.splide {
    height: 100%;
    width: 100vw;
}

.splide__track {
    height: 100%;
}

.splide__slide {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.slide-content {
    display: flex;
    flex-direction: column; 
    height: 100%;
    width: 80%;    
    max-width: 1000px;
    min-width: 300px;
    justify-content: space-between;
    text-align: center;
    margin: 0 auto;
}

.slide-content {
    align-items: center;
}

.row {
    flex: 1;
    /* display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start; */
    width: 100%;
    height: 100%;
    padding-top: 5vh;
    margin-left: 2vw;
    margin-right: 2vw;
} 

.top-row {
    font-size: 2.0rem;
} 

.middle-row {
    display: flex;
    justify-content: center;
}

.row input:not([type="range"]),
.row textarea,
.row button,
.row select {
    background-color: rgba(255, 255, 255, 0.8);
}

.info {
    font-size: 0.75rem;
    color: #bbb;
    text-align: center; 
    position: fixed;
    bottom: 10px;
    width: 100%;
    padding: 10px;
    z-index: 100; /* Ensures it stays above other elements */

}

.yo-yo-form {
    width: 16em;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: 1rem;
    font-size: 1.1rem;
}

.yo-yo-form .form-control {
    position: relative;
    box-sizing: border-box;
    padding: 10px;
}

.textarea-container {
    display: flex;
    flex-direction: column;
    width: 400px;
}

#determination_individual {
    width:  100%;
    height: 100%;
    /* font-family: 'Courier New', monospace; */
    font-size: 1rem;
    border: 2px solid #ccc; /* Default border */
    padding: 8px;
    box-sizing: border-box;  /* Ensures padding doesn't affect size */
    resize: none;            /* Disable resizing */
    overflow-y: auto;        /* Enable vertical scrolling */
    white-space: pre-wrap;   
    border-radius: 5px;
    margin: 0;               /* No extra margins */
}

#room_canvas {
    width:  100%;
    height: 100%;
}

#room_container {
    position: relative;
    width: 50%;
    height: 100%;
}

.room_item {
    position: absolute;
    width: 50px;
    height: 50px;
    background: darkgrey;
    border-radius: 50%;
    text-align: center;
    color: white;
    font-weight: bold;
    transform: translate(-50%, -50%);
}

.room_item img {
    width: 100%;
    /* height: 60px; */
    /* object-fit: cover; */
    /* border-radius: 50%; */
}

.room_item span {
    font-size: 14px;  /* Adjust text size */
    color: black;      /* Change text color */
    text-align: center; /* Center text */
    /* margin-top: 5px; */
}

.slider-container {
    width: 100%;
}

.slider{
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: 50%; 
    height: 4px;
    background: #d3d3d3;
    outline: none;
}


.slider::-webkit-slider-thumb {
    -webkit-appearance: none; /* Override default look */
    appearance: none;
    width: 20px;
    height: 20px;
    border-radius: 50%; 
    background: #7f7a7a;
}

.slider::-moz-range-thumb {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: #7f7a7a;
}

.ssid {
    font-style: italic;
}

/* Keep the input text large enough that Safari doesn't need to zoom it on iOS */
input, button, textarea, select {
    font-size: 16px;
}

ol {
  margin-left: 0;
  padding-left: 1em;
  text-align: left;
}

#install_button {
    visibility: hidden;
}

